@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Oct 18 13:24:06 2001 -->
+<!-- Mon Oct 22 13:02:14 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -71,9 +71,6 @@ Overview
 <TR><TD BGCOLOR="#cccccc">
 <A HREF="inuse.html">TMDA In Use</A>
 </TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="resources.html">External Resources</A>
-</TD></TR>
 <TR><TD BGCOLOR="#cccccc">&nbsp;
 <TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
 Usage
@@ -102,6 +99,9 @@ Support
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">
 <A HREF="bugs.html">Bugs &amp; Patches</A>
+</TD></TR>
+<TR><TD BGCOLOR="#cccccc">
+<A HREF="resources.html">External Resources</A>
 </TD></TR>
 <TR><TD BGCOLOR="#cccccc">&nbsp;
 <TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
