@@ -3,3 +3,4 @@
 <li><A href="faq.html">FAQ</a>
 <li><a href="lists.html">Mailing Lists</a>
 <li><a href="bugs.html">Bugs &amp; Patches</a>
+<li><a href="resources.html">External Resources</a>
